# GarbageCollection

./: .gitignore  .python-version  README.md  pyproject.toml
data/: 1010210552220490.txt  CodeBERT_exactmatch_index.txt  CodeBERT_exactmatch_index_investigate.txt  CodeBERT_head_exactmatch_index.txt  CodeBERT_tail_exactmatch_index.txt  CodeBERT_whole_exactmatch_index.txt  CodeT5_exactmatch_index.txt  CodeT5_exactmatch_index_investigate.txt  CodeT5_head_exactmatch_index.txt  CodeT5_tail_exactmatch_index.txt  CodeT5_tail_prediction.txt  CodeT5_whole_exactmatch_index.txt  Common_partmatch_index.txt  MulaRec_exactmatch_index.txt  MulaRec_exactmatch_index_investigate.txt  MulaRec_head_exactmatch_index.txt  MulaRec_predictions.txt  MulaRec_tail_exactmatch_index.txt  MulaRec_whole_exactmatch_index.txt  MyApproachCorrectness.csv  api_head_or_tail.json  codet5_tail_prediction_30.txt  codet5_tail_prediction_50.txt  codet5_tail_prediction_70.txt  codet5_tail_prediction_90.txt  data.txt  first_correctCount_and_appearCount20.json  first_correctCount_and_appearCount30.json  first_correct_api.json  first_prediction_api.json  index.html  rejected_but_correct_analysis.csv  rejected_but_correct_analysis_sorted.csv  wine_class.csv
src/: 01_create_headortail_json.py  06_compare_preds_and_refs.py  07_show_correctapi_venn.py  08_separate_haedandtail.py  09_test_exactmatch.py  10_separate_testdata_for_investigate_and_test.py  10_test_exactmatch_whole.py  11_analyze_firstPrediction_of_eachModel.py  12_analyze_firstCorrect_api.py  13_show_headortail_exactmach_venn.py  14_create_em.py  26_fuck.py  (+75 more)
