[tool.poetry]
name = "GarbageCollection"
version = "0.1.0"
description = ""
authors = ["ssf2xguile <iwanatteiwanai123@gmail.com>"]
readme = "README.md"
packages = [{include = "TryProgram"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow-gpu = "2.10.0"
tensorflow-io-gcs-filesystem = "^0.24.0"
Janome = "^0.4.2"
scikit-learn = "^1.2.2"
tensorflow = "2.10.0"
bs4 = "^0.0.1"
matplotlib = "^3.7.1"
gensim = "^4.3.1"
websocket = "^0.2.1"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp39-cp39-win_amd64.whl"}
lightning = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
